--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -15,11 +15,21 @@ body {
     color: #ffffff;
 }
 
-.header h1 {
+/* .header h1 { */
+h1{
     display: inline-block;
     font-size: 48px;
 }
 
+h3{
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+h2{
+    margin-bottom: 30px;
+    text-align: left;
+}
 .header h1 .seo {
     color: #d9dcd6;
 }
@@ -48,6 +58,7 @@ a {
 
 p {
     font-size: 16px;
+    float: inline-start;
 }
 
 .hero {
@@ -74,7 +85,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/* I changed it from id to a class */
 #benefits {
     margin-right: 20px;
     padding: 20px;
@@ -101,8 +112,8 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefit-lead h3 {
+/* preuvios CSS for headers now from 19 to 30 */
+/* .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -114,8 +125,8 @@ p {
 
 .benefit-cost h3 {
     margin-bottom: 10px;
-    text-align: center;
-}
+    text-align: center; */
+
 
 .benefit-lead img {
     display: block;
@@ -161,17 +172,20 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* added display: inline-block; for the img  */
 .search-engine-optimization img {
     max-height: 200px;
+    display: inline-block;
 }
-
+/* added display: inline-block; for the img  */
 .online-reputation-management img {
     max-height: 200px;
+    display: inline-block;
 }
-
+/* added display: inline-block; for the img  */
 .social-media-marketing img {
     max-height: 200px;
+    display: inline-block;
 }
 
 .search-engine-optimization h2 {
@@ -193,9 +207,10 @@ p {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
+    
 }
 
 .footer h4 {
     font-size: 20px;
+    text-align: center;
 }
