--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -15,21 +15,11 @@ body {
     color: #ffffff;
 }
 
-/* .header h1 { */
-h1{
+.header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-h3{
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-h2{
-    margin-bottom: 30px;
-    text-align: left;
-}
 .header h1 .seo {
     color: #d9dcd6;
 }
@@ -58,7 +48,6 @@ a {
 
 p {
     font-size: 16px;
-    float: inline-start;
 }
 
 .hero {
@@ -85,7 +74,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-/* I changed it from id to a class */
+
 #benefits {
     margin-right: 20px;
     padding: 20px;
@@ -95,10 +84,10 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    /* position: relative;  */
+   
 }
 
-.benefit-lead {
+.benefit-lead .benefit-brand .benefit-cost main section{
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -112,35 +101,14 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-/* preuvios CSS for headers now from 19 to 30 */
-/* .benefit-lead h3 {
+
+/* all h3 headers combined*/
+aside section h3{
     margin-bottom: 10px;
     text-align: center;
 }
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center; */
-
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+/* all imgs combined*/
+aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -172,45 +140,25 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-/* added display: inline-block; for the img  */
-.search-engine-optimization img {
+/* all imgs in the main section are combined*/
+main section img {
     max-height: 200px;
-    display: inline-block;
-}
-/* added display: inline-block; for the img  */
-.online-reputation-management img {
-    max-height: 200px;
-    display: inline-block;
-}
-/* added display: inline-block; for the img  */
-.social-media-marketing img {
-    max-height: 200px;
-    display: inline-block;
 }
 
-.search-engine-optimization h2 {
+/* all h2 headers combined*/
+main section h2{
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
+/* footer content centered */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    
+    text-align: center;
 }
-
-.footer h4 {
+/* h4 footer centered */
+footer h4 {
     font-size: 20px;
     text-align: center;
 }
