--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -87,7 +87,7 @@ p {
    
 }
 
-.benefit-lead .benefit-brand .benefit-cost main section{
+.benefit-lead  {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -101,7 +101,6 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 /* all h3 headers combined*/
 aside section h3{
     margin-bottom: 10px;
